tests/ui/invalid_deref.stderr
error: invalid dereference
   --> invalid_deref.ina:4:14
    |
 LL |     let a = *20;
    |              ^^ `int` cannot be dereferenced

